# ESP32_SD16W_Adapter

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/iray_model/: CMakeLists.txt  Kconfig  idf_component.yml  iray_detect.cpp  iray_detect.hpp
main/: CMakeLists.txt  app_main.cpp  idf_component.yml  index.html
